--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,12 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+VERSION_NAME=2.3.0
+VERSION_CODE=22
+GROUP=com.wdullaer
+
+ANDROID_BUILD_MIN_SDK_VERSION=17
+ANDROID_BUILD_TARGET_SDK_VERSION=23
+ANDROID_BUILD_SDK_VERSION=23
+ANDROID_BUILD_TOOLS_VERSION=23.0.2
