--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,9 @@
     package="com.lawyer.customerloyaltysms">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <permission android:name="android.permission.INTERNET" />
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -19,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".activity.Filter" />
+        <activity android:name=".activity.filter"></activity>
     </application>
 
 </manifest>
